amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann. GPL License.


VERSION 0.6.0-PRE5:
  * added: documentation
  * fixed: cleaned up Makefile.am a bit
  * fixed: defined new APP_VERSION macro, since the old approach did not work
    with CVS
  * changed: put amarok into KDE CVS (KDENONBETA)
  * added: applied Stormchaser's button patch. the AmarokButtons now work
    in a more standard conform way. Thanks Stormchaser, blessed be :)

VERSION 0.6.0-PRE4:
  * added: buttons in playlist window for play, pause, stop, next, prev.
    a.k.a. stakker mode :)
  * removed: "load" button. this functionality is now provided by "Add item"
  * added: more sanity checks on pointers
  * fixed: when track in playlist does not exist, we now skip to the next track
  * fixed: all aRts references are freed correctly at program exit
  * fixed: effects will not be forgotten any more when EffectWidget is closed

VERSION 0.6.0-PRE3:
  * fixed: crash when URLs were dropped onto filebrowser from other apps
  * fixed: URL dialog now accepts remote files
  * added: correct caption for ArtsConfigWidget
  * added: "amaroK Handbook" menu entry, calling KHelpCenter
  * changed: amarok gets installed into multimedia now
  * fixed: PlayObject configuration

VERSION 0.6.0-PRE2:
  * changed: safety question at program exit now off by default
  * removed: button "sub" - it was useless
  * changed: clearing playlist does not stop playing anymore - for Grue ;)
  * fixed: potential crash at startup
  * added: menu option to configure PlayObject
  * fixed: crash when removing currently playing track

VERSION 0.6.0-PRE1:
  * fixed: flicker in glowing item
  * fixed: another memory leak in analyzer (hopefully the last one!)
  * added: playlist widget can display metainfo instead of filenames
  * added: repeat track / repeat playlist

VERSION 0.5.2 - 0.5.2-DEV6:
  * fixed: memory leak in analyzer code.
  * added: shortcut for copying current title to the clipboard