@@ -1,4 +1,4 @@
-SUBDIRS = amarok doc
+SUBDIRS = amarok
 EXTRA_DIST = amarok.kdevprj admin AUTHORS COPYING ChangeLog INSTALL README TODO amarok.lsm 
 AUTOMAKE_OPTIONS = foreign 
 
